[package]
name = "nft"
version = "0.0.1"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>","hhoareau@gmail.com",]
edition = "2020"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.9.7"
path = "../lib-elrond/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.9.7"
path = "../lib-elrond/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.9.7"
path = "../lib-elrond/elrond-wasm-node"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.9.7"
path = "../lib-elrond/elrond-wasm-debug"